<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:paddingTop="@dimen/status_bar_height">

    <TextView
        android:id="@+id/tv_address_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_address_choose"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/address_choose"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_psw_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_address_choose"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/psw_change"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_choose" />

    <TextView
        android:id="@+id/tv_auto_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_address_choose"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/auto_refresh"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_psw_change" />

    <TextView
        android:id="@+id/tv_ip_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/shape_address_choose"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ip_refresh"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_auto_refresh" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/rl_ip_connect"
        app:layout_constraintEnd_toEndOf="@+id/rl_ip_connect"
        app:layout_constraintStart_toStartOf="@+id/rl_ip_connect">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/tv_ip_status_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_ip_title" />

            <TextView
                android:id="@+id/tv_ip"
                style="@style/tv_ip_status_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/tv_ip_status_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_title" />

            <TextView
                android:id="@+id/tv_address_value"
                style="@style/tv_ip_status_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_value" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_ip_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_ip_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ip_connect"
            android:minWidth="180dp"
            android:minHeight="180dp" />

        <TextView
            android:id="@+id/tv_ip_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/ip_connect"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_net_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/net_error"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>